fixed menu alignment styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -377,20 +377,20 @@ section {
   .instructional-modal {
     width: 90%;
   }
-
   .instructional-modal p {
     font-size: 0.9em;
   }
-
+  .start-btn {
+    width: 550px;
+    max-width: 90%;
+  }
   .grid {
     width: 90%;
     max-width: 600px;
   }
-
   .item0 {
     border: 7px solid black;
   }
-
   .item3 {
     border: 4px solid black;
   }
@@ -400,20 +400,13 @@ section {
   .modal {
     width: 90%;
   }
-
   .instructional-modal p {
     font-size: 0.8em;
   }
-
-  .start-container {
-    width: 90%;
-  }
-
   .grid {
     width: 92%;
     max-width: 600px;
   }
-
   .start-timer,
   .game-text-label {
     transform: translateY(-66%);
